--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="ru">
 
   <head>
+
     <meta charset="UTF-8">
     <title>index</title>
   </head>
@@ -9,13 +11,13 @@
     <form id="form">
       <input id="field1" type="text">
       <select id="select1">
-        <option value="v1" rub=200>Помидоры (шт.) 200</option>
-        <option value="v2" rub=500>Картофель (шт.) 500</option>
-        <option value="v3" rub=300>Морковь (шт.) 300</option>
+        <option value=200>Помидоры (шт.) 200</option>
+        <option value=500>Картофель (шт.) 500</option>
+        <option value=300>Морковь (шт.) 300</option>
       </select>
     <button type = "submit">Рассчитать</button>
   </form>
-    <h1><div id = "result">Вам нужно заплатить: </div></h1>
+    <h1 id = "result">Вам нужно заплатить: </h1>
      <script src = "scrip.js"></script>
   </body>
 
